fix submit style on iOS

--- a/public/assets/less/source/post-settings.less
+++ b/public/assets/less/source/post-settings.less
@@ -199,6 +199,7 @@
         font-size: 17px;
         padding: 2px 12px 1px;
         line-height: 28px;
+        -webkit-appearance: none;
 
         &:active,
         &:focus {
